// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`winCodeSign: 1.1.0 > windows > nsis 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp Setup.exe",
      "safeArtifactName": "TestApp-Setup.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup.exe.blockmap",
      "safeArtifactName": "TestApp-Setup.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp Setup.exe",
          },
        ],
        "path": "TestApp Setup.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`winCodeSign: 1.1.0 > windows > nsis 2`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp Setup.exe",
      "safeArtifactName": "TestApp-Setup.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp Setup.exe.blockmap",
      "safeArtifactName": "TestApp-Setup.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp Setup.exe",
          },
        ],
        "path": "TestApp Setup.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;
